--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>mano pirmas puslapis</h1>
-
+<p>man patinka keliauti</p>
+<a href="https://www.facebook.com" target="_blank">fb profilis</a>
+<p>
 </body>
 </html>
