--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style=>
 <head>
 <title>Vaidas</title>
 </head>
@@ -8,6 +8,14 @@
 <h1>mano pirmas puslapis</h1>
 <p>man patinka keliauti</p>
 <a href="https://www.facebook.com" target="_blank">fb profilis</a>
-<p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat.<br/><br/> Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br/><br/>
+<img width="150" height="150" src="https://static.pexels.com/photos/26750/pexels-photo-26750.jpg">
+style
+</p>
 </body>
 </html>
