--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html style=>
 <head>
 <title>Vaidas</title>
+<style>
+h1
+{
+	color:orange;
+}
+</style>
 </head>
 <body>
 
@@ -15,7 +21,6 @@ consequat.<br/><br/> Duis aute irure dolor in reprehenderit in voluptate velit e
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br/><br/>
 <img width="150" height="150" src="https://static.pexels.com/photos/26750/pexels-photo-26750.jpg">
-style
 </p>
 </body>
 </html>
