--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html style=>
 <head>
 <title>Vaidas</title>
+<link=stesheet href=''css/app.css>
 <style>
-h1
-{
-	color:orange;
-}
+
 </style>
 </head>
 <body>
